samples/_failures_safe/1761090335_2ed2a6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5777f017.c: In function ‘main’:
./samples/SAFE/__tmp_5777f017.c:157:5: error: expected declaration or statement at end of input
  157 |     printf("\nTranspose of B:\n");
      |     ^~~~~~
